<resources>
    <string name="app_name">TurnoApp</string>
    <string name="action_settings">Settings</string>
    <string name="main_button">Iniciar la reserva</string>
    <string name="main_tvwContenido">La app le facilitará la reserva de un turno en el paradero de su elección, según las normas y politicas de la empresa.</string>
    <string name="telefono_tvwImportante">IMPORTANTE</string>
    <string name="telefono_Mensaje1">Por favor, ingresa tu número de teléfono.</string>
    <string name="telefono_tvwMensaje">Recuerda que el número de teléfono que ingreses, antes debe estar registrado por el administrador de la app.</string>
    <string name="title_activity_cuadro_dialogo">CuadroDialogoActivity</string>

    <string name="cuadrodialogotelefono_titulo">Enviaremos un código de verificación al correo [correo]</string>
    <string name="cuadrodialogotelefono_mensaje">Para completar la verificación de tu número de telefono, ingresa el código de verificación de 6 dígitos.</string>
    <string name="cuadrodialogotelefono_btnaceptar">Enviar por correo</string>
    <string name="text_cancelar">Cancelar</string>
    <string name="cuadrodialogodatoschofer_titulo">Autorización</string>
    <string name="cuadrodialogodatoschofer_mensaje"><b>%1$s</b>, necesita acceso a tu ubicación, para poder disfrutar de todas las funcionalidades que la app te ofrece.</string>
    <string name="cuadrodialogodatoschofer_btnaceptar">Activar GPS</string>

    <string name="verificacion_mensaje1">Estamos enviando un mensaje al correo electrónico %1$s</string>
    <string name="verificacion_mensaje2"><b>TurnoApp</b> hará todo el proceso automáticamente.</string>
    <string name="verificacion_mensaje3">Te enviaremos un correo en 0:%1$s</string>
    <string name="validar_verificacion_mensaje1">Ingresa el código de verificación de 6 dígitos enviado por correo.</string>
    <string name="datoschofer_mensaje1">Por favor, verifica tus datos sean los registrados.\nSi deseas puedes actualizarlos.</string>
    <string name="title_verificacion">Verificación</string>
    <string name="title_datoschofer">Tu nombre</string>
    <string name="title_activity_panel_turnos">PanelTurnos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_rutas">Rutas</string>
</resources>
