<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".TelefonoActivity"
    tools:showIn="@layout/activity_telefono">

    <TextView
        android:id="@+id/tvwImportante"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/telefono_tvwImportante"
        android:textColor="@color/colorTextControl"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:text="@string/telefono_tvwMensaje"
        android:textColor="@color/colorTextControl"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvwImportante" />

    <EditText
        android:id="@+id/txtPais"
        android:layout_width="390dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:text="Perú"
        android:textColor="@color/colorTextPrimary"
        android:textCursorDrawable="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:text="@string/telefono_Mensaje1"
        android:textColor="@color/colorTextPrimary"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvwCodigoPais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        android:text="+51"
        android:textColor="@color/colorTextControl"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPais"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText"
        style="@style/EditTextControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="phone"
        android:maxLength="9"
        android:theme="@style/EditTextControl"
        app:layout_constraintStart_toEndOf="@+id/tvwCodigoPais"
        app:layout_constraintTop_toBottomOf="@+id/txtPais" />


</android.support.constraint.ConstraintLayout>